[gd_scene load_steps=17 format=3 uid="uid://bj2tb1tamwgt"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_08n4b"]
[ext_resource type="Texture2D" uid="uid://8yggpihje38c" path="res://Assets/UI/menu_art.png" id="2_coqx5"]
[ext_resource type="Texture2D" uid="uid://dg886s2s2famk" path="res://Assets/UI/play_normal.png" id="2_paqmx"]
[ext_resource type="Texture2D" uid="uid://bja48v5eaddm2" path="res://Assets/UI/menu_text.png" id="3_c8rgq"]
[ext_resource type="Texture2D" uid="uid://duu3dwqthvxxx" path="res://Assets/UI/play_pressed.png" id="3_q8x8h"]
[ext_resource type="Texture2D" uid="uid://dyqvyrfx0qyys" path="res://Assets/UI/play_hover.png" id="4_3658j"]
[ext_resource type="Texture2D" uid="uid://c0867obimk8cm" path="res://Assets/UI/tutorial_normal.png" id="5_0mvw7"]
[ext_resource type="Texture2D" uid="uid://dtsj81n4qi8y8" path="res://Assets/UI/tutorial_pressed.png" id="6_3xfcl"]
[ext_resource type="Texture2D" uid="uid://do4a8cw41hn42" path="res://Assets/UI/tutorial_hover.png" id="7_xplo0"]
[ext_resource type="Texture2D" uid="uid://b2fjncl6qn660" path="res://Assets/UI/settings_normal.png" id="10_6bvgi"]
[ext_resource type="Texture2D" uid="uid://5j3i3j3h3aqj" path="res://Assets/UI/settings_pressed.png" id="11_rkkmu"]
[ext_resource type="Texture2D" uid="uid://bkcedexak63n1" path="res://Assets/UI/settings_hover.png" id="12_uqvtv"]
[ext_resource type="AudioStream" uid="uid://o344el8qrcd" path="res://Assets/SFX/sneeze.wav" id="13_433c7"]
[ext_resource type="AudioStream" uid="uid://bk6y4jjoardg" path="res://Assets/SFX/cartoon-music.wav" id="14_am3bv"]

[sub_resource type="Animation" id="Animation_5wy5s"]
resource_name = "show_menu"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:rotation")
tracks/2/interp = 3
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.1, 1),
"update": 0,
"values": [-0.610865, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title:rotation")
tracks/3/interp = 3
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [-0.785398, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 0.25, 1),
"update": 0,
"values": [Vector2(460.8, 650), Vector2(460.8, 650), Vector2(460.8, 412.128)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_itq73"]
_data = {
"show_menu": SubResource("Animation_5wy5s")
}

[node name="Menu" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08n4b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.875
offset_left = 75.0
offset_top = 8.5
offset_right = -75.0
offset_bottom = -8.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 269.5)
texture = ExtResource("2_coqx5")
metadata/_edit_use_anchors_ = true

[node name="Title" type="TextureRect" parent="."]
custom_minimum_size = Vector2(506, 382)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.309896
anchor_top = 0.058642
anchor_right = 0.749132
anchor_bottom = 0.648148
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(251, 186)
texture = ExtResource("3_c8rgq")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.55
anchor_right = 0.6
anchor_bottom = 0.975
offset_top = 55.728
offset_right = -6.10352e-05
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -5
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Play Button" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(218, 76)
layout_mode = 2
texture_normal = ExtResource("2_paqmx")
texture_pressed = ExtResource("3_q8x8h")
texture_hover = ExtResource("4_3658j")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Tutorial Button" type="TextureButton" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(218, 76)
layout_mode = 2
texture_normal = ExtResource("5_0mvw7")
texture_pressed = ExtResource("6_3xfcl")
texture_hover = ExtResource("7_xplo0")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Settings Button" type="TextureButton" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(218, 76)
layout_mode = 2
texture_normal = ExtResource("10_6bvgi")
texture_pressed = ExtResource("11_rkkmu")
texture_hover = ExtResource("12_uqvtv")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_itq73")
}

[node name="Sneeze SFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_433c7")
volume_db = -15.0
bus = &"SFX"

[node name="Menu Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_am3bv")
volume_db = -33.0
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial Button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings Button" to="." method="_on_settings_button_pressed"]
